feat: replacing AddressTxCountRepository.java and StakeAddressTxCountRepository.java with ExplorerAggregationService